' ============================================================
' SECCIÓN DEL DOCUMENTO: § 8. R-3 — Ejecución del Sprint 1 › Diseño de Lógica — PB-01 Ciclo de vida del Proyecto
' Archivo: docs/ONLINE/PRESENTACION/presentacion-scrum-s0-s1.md
' Perspectiva de diseño: (c) Diseño de Lógica — Diagrama de Estados
' HU: PB-01 Gestionar Proyecto de Survey
' ============================================================

@startuml
title Diseño de Lógica — Diagrama de Estados\nPB-01: Ciclo de vida del Proyecto de Survey\nWireless HeatMapper (modalidad 100 % en línea)
skinparam stateBackgroundColor #EBF5FB
skinparam stateBorderColor #2980B9
skinparam stateHeaderBackgroundColor #2980B9
skinparam stateHeaderFontColor white
skinparam arrowColor #2980B9
skinparam noteBackgroundColor #FFFDE7

[*] --> Nuevo : POST /api/proyectos\n(técnico autenticado crea proyecto)

state "NUEVO" as Nuevo {
  Nuevo : estado = 'nuevo'
  Nuevo : cantidadPuntos = 0
  Nuevo : sin planos ni mediciones
}

state "EN_PROGRESO" as EnProgreso {
  EnProgreso : estado = 'en_progreso'
  EnProgreso : plano cargado (Sprint 2)
  EnProgreso : mediciones activas (Sprint 3)
}

state "COMPLETADO" as Completado {
  Completado : estado = 'completado'
  Completado : heatmap generado (Sprint 4)
  Completado : reporte disponible (Sprint 5)
}

state "ARCHIVADO" as Archivado {
  Archivado : estado = 'archivado'
  Archivado : no aparece en listado por defecto
  Archivado : visible con filtro estado=archivado
}

state "ELIMINADO" as Eliminado {
  Eliminado : registro borrado de la BD
  Eliminado : solo posible sin reportes exportados
}

' ─── Transiciones válidas (Sprint 1) ─────────────────────────
Nuevo --> EnProgreso : PATCH /api/proyectos/{id}\n(actualizar — implica cambio de estado\nen Sprint 2 al cargar plano)
Nuevo --> Archivado : PATCH /api/proyectos/{id}/archivar\n(CA-3 — técnico archiva)
Nuevo --> Eliminado : DELETE /api/proyectos/{id}\n(CA-4 — con confirmación modal)

EnProgreso --> Completado : PATCH /api/proyectos/{id}\n(estado → completado — Sprint 4)
EnProgreso --> Archivado : PATCH /api/proyectos/{id}/archivar
EnProgreso --> Eliminado : DELETE /api/proyectos/{id}\n(solo si sin reportes — CA-4 extendido Sprint 5)

Completado --> Archivado : PATCH /api/proyectos/{id}/archivar
Completado --> Nuevo : (regreso manual — edge case)

Archivado --> Nuevo : PATCH /api/proyectos/{id}\n(restaurar — cambiar estado a 'nuevo')
Archivado --> EnProgreso : PATCH /api/proyectos/{id}\n(restaurar a en_progreso)
Archivado --> Eliminado : DELETE /api/proyectos/{id}

Eliminado --> [*]

' ─── Anotaciones de restricciones ───────────────────────────
note right of Nuevo
  Estado inicial al crear.
  PUT /api/proyectos/{id} permite
  editar nombre, cliente y descripción
  en cualquier estado excepto ELIMINADO.
end note

note right of Archivado
  GET /api/proyectos (sin filtro)
  excluye los archivados.
  GET /api/proyectos?estado=archivado
  devuelve solo archivados (PB-10).
end note

note bottom of Eliminado
  Sprint 1: eliminación libre.
  Sprint 5: 409 Conflict si existen
  reportes exportados asociados al proyecto
  (PB-01 — regla de negocio futura).
  Admin no puede eliminar desde panel web
  (solo técnico dueño del proyecto).
end note

note right of EnProgreso
  La transición Nuevo → EnProgreso
  ocurrirá en Sprint 2 al subir el plano
  o en Sprint 3 al registrar la primera
  medición WiFi.
end note
@enduml
